<resources>
    <string name="action_settings" translatable="false">Settings</string>

    <!-- String literals used in suorce code, inside the view models which have no access to Android resources....-->
    <string name="protocol_start_text">Alle Ergebnisse werden hier protokolliert. Um einen Eintrag zu löschen, wischen Sie ihn einfach auf die rechte Seite.</string>
    <string name="ptotocol_entry_deleted">Der Eintrag wurde gelöscht.</string>
    <string name="no_solution">Keine Lösung gefunden....</string>
    <string name="searching">Suche.....</string>
    <string name="showing">Beste Lösung von insgesammt:</string>

    <!-- Main -->
    <!-- Strings used for fragments for navigation -->
    <string name="find_resistor">Wiederstand</string>
    <string name="divider">Spanungs Teiler</string>
    <string name="protocol_info">Protokolierung gestartet</string>
    <string name="version_info_ok">Ihre App ist auf dem neuesten Stand.</string>

    <!-- Fragment find resistor -->
    <string name="titel_find_resistor">Standard Wiederstand finden</string>
    <string name="input_resistor_value_hint">Wiederstand [Ohm]</string>
    <string name="output_standard_res_value_and_series">Standard Wiederstand/ E- Reihe</string>
    <string name="input_error_in_percent_hint">Zugelassene Abw. in %</string>
    <string name="allowed_deviation">Zugelassene Abweichung</string>
    <string name="calc_button">Finde...</string>
    <string name="searched_was_text">Gesucht wurde</string>

    <string name="resistor_nominel_text">Nominell</string>
    <string name="resistance_max">Maximaler Wert</string>
    <string name="resistance_min">Minimaler Wert</string>
    <string name="e_series_error_margin">Serien spezifischer Fehler</string>

    <!-- Fragment Divider -->
    <string name="titel_divider">Spannungsteiler</string>
    <string name="divider_sub_title">Beste Lösung finden"</string>
    <string name="vin_hint" translatable="false">Vin [Volt]</string>
    <string name="vout_hint" translatable="false">Vout [Volt]</string>
    <string name="error_r2_hint">R2 [Ohm], zulässige abw. %</string>
    <string name="solve">Lösen</string>
    <string name="solution_hint">Lösung......</string>
    <string name="exclude_info_text">Ohne:</string>
    <string name="show_all_solutions_for_divider">Zeige alle Lösungen</string>
    <string name="show_all_subtitle">Alle Lösungen</string>
    <string name="share">Teilen</string>
    <string name="back_to_find_new_div_res">Zurück, neue Lösung..</string>
    <string name="solution_count_hint">Gefundene Löungen....</string>
    <string name="share_all_sol_tooltip">Lösungen als HTML im Clipboard speichern</string>


    <!-- Fragment Protocol -->
    <string name="clear_protol">Löschen</string>
    <string name="send">Teilen</string>
    <string name="to_clipboard">Das Protokoll wurde in die Zwischenablage kopiert.</string>

    <!-- Info fragment -->
    <string name="version_info_update_available">Es ist eine neue Version dieser App verfügbar.</string>
    <string name="version" translatable="false">Version:</string>
    <string name="version_info_update_available_short">Es ist eine neuere Version dieser App im Google Play Store verfügbar.</string>

    <string name="no_network">Kein Netzwerk, die aktuelle Version der App im Play Store, kann nicht ermittelt werden.</string>

    <string name="no_version_info_available">Die aktuelle Version im Play Store konnte nicht ermittelt werden.</string>

    <string name="dialog_new_version_available" translatable="true">
        <![CDATA[<p><b>Neue Version verfügbar</b></p>

        <p>Im <i>Google Play Store</i> ist eine überarbeitete Version dieser <i>App</i> verfügbar.</p>

        <p>Wenn Sie möchten, dann können sie von hier aus direkt in den <i>Google Play Store</i> wechseln und das Update durchführen.</p>

        <p>Ihre Einstellung und gespeicherten Daten bleiben erhalten.</p>

        Neue Version:]]>
    </string>

    <string name="play_store_upate_info_not_possible">Es konnte keine Information zu bestehenden Updates aus dem Play Store abgerufen werden.</string>

    <string name="do_update_confirm_button" translatable="false">Update</string>
    <string name="no_udate_button">Nein,danke</string>
    <string name="app_name">Spannungsteiler</string>

</resources>