<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/TitelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/titel_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/divSubTitle"
        style="@style/SubTitelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all_subtitle"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"></TextView>

    <WebView
        android:id="@+id/webview_table_of_all_solutions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="8dp"
        app:layout_constraintBottom_toTopOf="@id/share"
        app:layout_constraintTop_toBottomOf="@+id/divSubTitle" />

    <Button
        android:id="@+id/share"
        style="@style/button"
        app:icon="@android:drawable/ic_menu_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/webview_table_of_all_solutions"></Button>

    <Button
        android:id="@+id/close_table_view"
        style="@style/button"
        app:icon="@drawable/divider_schematic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_find_new_div_res"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/share"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>