<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentProtocol">

    <TextView
        android:id="@+id/textView"
        style="@style/TitelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/titel_find_resistor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:id="@+id/resistor_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/resistor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"></ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/error_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/resistor_view"

        app:layout_constraintTop_toTopOf="@+id/resistor_view">

        <EditText
            android:id="@+id/tolerable_error_in_p"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="50"
            android:hint="@string/input_error_in_percent_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resistor_value_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/resistor_view"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toLeftOf="@+id/resistor_view"
        app:layout_constraintTop_toBottomOf="@+id/error_text_input_layout">

        <EditText
            android:id="@+id/resistor_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="50"
            android:hint="@string/input_resistor_value_hint"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/standard_value_and_series"
        style="@style/TextBody"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#DEE1E3"
        android:hint="@string/output_standard_res_value_and_series"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc"></TextView>

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button"
        app:layout_constraintTop_toBottomOf="@+id/resistor_view"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>