<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentDivider">

    <TextView
        android:id="@+id/textView"
        style="@style/TitelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/titel_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:id="@+id/div"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/vin_value_layout"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vin_value_layout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/div"
        app:layout_constraintTop_toTopOf="@+id/div">

        <EditText
            android:id="@+id/v_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="50"
            android:hint="@string/vin_hint"
            android:inputType="numberDecimal"
            app:layout_constraintRight_toLeftOf="@+id/div" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/vout_value_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/div"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/div"
        app:layout_constraintTop_toBottomOf="@+id/vin_value_layout">

        <EditText
            android:id="@+id/v_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vout_hint"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toTopOf="@+id/v_in"></EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/find_solution_for_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/solve"
        app:layout_constraintStart_toStartOf="@+id/vout_value_layout"
        app:layout_constraintTop_toBottomOf="@+id/div"></Button>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="#DEE1E3"
        app:layout_constraintBottom_toTopOf="@id/next_sol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_solution_for_divider">

        <TextView
            android:id="@+id/divider_result"
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/solution_hint"></TextView>
    </ScrollView>

    <Button
        android:id="@+id/next_sol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/show_next_sol"
        app:layout_constraintStart_toEndOf="@+id/last_sol"
        app:layout_constraintTop_toTopOf="@+id/last_sol"></Button>

    <Button
        android:id="@+id/last_sol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_last_sol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <TextView
        android:id="@+id/solution_counter"
        style="@style/TextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/solution_count_hint"
        app:layout_constraintBottom_toBottomOf="@+id/next_sol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/next_sol"></TextView>

    <ProgressBar
        android:id="@+id/progress_searching_divider"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2"></ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>